style and shape adjustments

--- a/distributor.html
+++ b/distributor.html
@@ -370,7 +370,7 @@ function main ()
         nodeGain1   : audioContext.createGain(),
     };
 	var the = document.distributor;
-	the.radius = 6;  // Must be 5 or greater (diameter - 6 is used)
+	the.radius = 5;  // Must be 5 or greater (diameter - 6 is used)
 
 	the.diameter = 1 + 2 * the.radius;
 	the.coordinates = [];
@@ -484,7 +484,7 @@ window.onload = function ()
 
  <table id="bundle">
 	<caption align="bottom">
-		<h3>Muscle Fiber Bundle Cross Section</h3>
+		<h3>Muscle Fiber Bundle</h3>
 	</caption>
 	<thead>
 <tr>
