Building home page

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 	<body>
 		<header>
 			<big><big><big><b>Brain Building Kit&trade;</b></big></big></big>
+			<small>
+				Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved
+			</small>
 		</header>
 		<nav>
 		</nav>
 		<table>
-			<tr><td>
-				</td><td valign="top">
-			</td></tr>
+			<tr><td><a href="gaze.html"></td><td>1st model of reflex</td></tr>
+			<tr><td><a href="distributor.html"></td><td>twitch visualizer</td></tr>
+			<tr><td></td><td></td></tr>
 		</table>
 		<footer>
 			<hr />
-			<small>
-				Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved
-			</small>
 		</footer>
 	</body>
 </html>
