Building home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			</small>
 		</header>
 		<nav>
+		<button id="reload" onclick="location.reload (true)">reload</button>
 		</nav>
 		<table>
 			<tr><td><a href="gaze.html"></td><td>1st model of reflex</td></tr>
