Building home page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<button id="reload" onclick="location.reload (true)">reload</button>
 		</nav>
 		<table>
-			<tr><td><a href="gaze.html"></td><td>1st model of reflex</td></tr>
-			<tr><td><a href="distributor.html"></td><td>twitch visualizer</td></tr>
+			<tr><td><a href="gaze.html">1st model of reflex</a></td></tr>
+			<tr><td><a href="distributor.html">twitch visualizer</a></td></tr>
 			<tr><td></td><td></td></tr>
 		</table>
 		<footer>
