--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta   charset="utf-8" />
 	</head>
-	<body>
+	<body bgcolor="#ffcccc" align="center">
 		<header>
 			<big><big><big><b>Brain Building Kit&trade;</b></big></big></big>
 			<br />
