Building home page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
 	</head>
 	<body bgcolor="#ffffcc" align="center">
 		<header>
+			<table width="100%">
+				<tr><td align="left">
 			<big><big><big><b>Brain Building Kit&trade;</b></big></big></big>
 			<br />
+			<big><big><big><b>BBK&trade;</b></big></big></big>
+			<br />
+				</td><td align="right">
+					<big><b><u><i>Mathematics of the Brain </i></u></b></big>
+<br />
+artificial brain assembly tools 
+<br />
+with sample neuron and brain libraries
+
+				</td></tr>
+			</table>
 			<small>
 				Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved
 			</small>
@@ -19,6 +32,23 @@
 			<tr><td><a href="distributor.html">twitch visualizer</a></td></tr>
 			<tr><td></td><td></td></tr>
 		</table>
+		<span>
+			<h3>Why not put brains in your devices?</h3>
+			<p>
+Computers and dedicated signal processors currently don't solve problems that brains do. Brain processing paradoxes remain unsolved by the neurosciences and current disciplines such as neuromorphic engineering, neural nets, and AI; even for simple organisms like C. Elegans (302 neurons).
+			</p><p>
+Computers can solve problems that brains do. Devices can have fine economical sensorimotor reflexes, like animals do. However, a new mathematical foundation must be established to accomplish this. Brain Building Kit™ is in the process of establishing this.
+			</p><p>
+Unlike how animals with brains do it, many modern devices compensate low performance by using more sensors, actuators, processing, and power. These compensations add unwanted weight and waste much power. In addition, manufacturing defects and damage render these machines useless, driving up Quality Control costs and decreasing lifespan.
+			</p><p>
+By contrast, brains consume far less power to transduce, model, and transform; effecting distributed processing and predictive feedback to achieve results superior to modern devices. Also, they are relatively insensitive to defects and damage, rapidly redeploying neural pathways to achieve similar goals when injured.
+			</p><p>
+The promise of brains in devices includes greater economies, lower energy consumption, reliability under stress, and better assessment and control of situations. The Brain Building Kit™ produces functioning artificial brains that exhibit these paradoxical efficiencies.
+			</p><p>
+With the patent pending Brain Building Kit™, artificial brains can be built that compete well with organic brains.
+			</p><p>
+With brains, your devices will work better than they ever have before.
+		</span>
 		<footer>
 			<hr />
 		</footer>
