Building home page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body bgcolor="#ffffcc" align="center">
 		<header>
-			<table width="100%">
+			<table width="100%" bgcolor="white">
 				<tr><td align="left">
 			<big><big><big><b>Brain Building Kit&trade;</b></big></big></big>
 			<br />
@@ -34,6 +34,7 @@ with sample neuron and brain libraries
 		</table>
 		<span>
 			<h3>Why not put brains in your devices?</h3>
+			<span align="left" bgcolor="white">
 			<p>
 Computers and dedicated signal processors currently don't solve problems that brains do. Brain processing paradoxes remain unsolved by the neurosciences and current disciplines such as neuromorphic engineering, neural nets, and AI; even for simple organisms like C. Elegans (302 neurons).
 			</p><p>
@@ -48,6 +49,8 @@ The promise of brains in devices includes greater economies, lower energy consum
 With the patent pending Brain Building Kit™, artificial brains can be built that compete well with organic brains.
 			</p><p>
 With brains, your devices will work better than they ever have before.
+			</p>
+			</span>
 		</span>
 		<footer>
 			<hr />
