Building home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 		<header>
 			<table width="100%" bgcolor="white">
 				<tr><td align="left">
-			<big><big><big><b>Brain Building Kit&trade;</b></big></big></big>
+				<big><big><big><b><i>
+					Brain Building Kit&trade;
+				</i></b></big></big></big>
 			<br />
 			<big><big><big><b>BBK&trade;</b></big></big></big>
 			<br />
