Building home page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ with sample neuron and brain libraries
 			<tr><td><a href="distributor.html">twitch visualizer</a></td></tr>
 			<tr><td></td><td></td></tr>
 		</table>
-		<span>
+		<table bgcolor="white">
+			<tr><td>
 			<h3>Why not put brains in your devices?</h3>
 			<span align="left" bgcolor="white">
 			<p>
@@ -52,7 +53,8 @@ With the patent pending Brain Building Kit™, artificial brains can be built th
 			</p><p>
 With brains, your devices will work better than they ever have before.
 			</p>
-			</span>
+			</td></tr>
+		</table>
 		</span>
 		<footer>
 			<hr />
