Building home page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ with sample neuron and brain libraries
 			<tr><td><a href="distributor.html">twitch visualizer</a></td></tr>
 			<tr><td></td><td></td></tr>
 		</table>
-		<table bgcolor="white">
+		<table width="100%" bgcolor="white">
 			<tr><td>
 			<h3>Why not put brains in your devices?</h3>
 			<span align="left" bgcolor="white">
